src/objects/Unit_Area_Charge_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Type__c</fullName>
        <label>Amount Type</label>
        <picklist>
            <picklistValues>
                <fullName>Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lumpsum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Broker_Discount__c</fullName>
        <label>Channel Partner Discount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Broker_Percent__c</fullName>
        <label>Channel Partner Percent</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Broker_Rate__c</fullName>
        <label>Channel Partner Rate</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Check__c</fullName>
        <label>Check</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Charges__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Global Charges</label>
        <referenceTo>Global_Charges__c</referenceTo>
        <relationshipLabel>Unit Area Charge Details</relationshipLabel>
        <relationshipName>Unit_Area_Charge_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gross_Amount__c</fullName>
        <label>Gross Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_Rate__c</fullName>
        <label>Gross Rate</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inaugral_Discount__c</fullName>
        <label>Inaugral Discount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inaugral_Percent__c</fullName>
        <label>Inaugral Percent</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inaugral_Rate__c</fullName>
        <label>Inaugral Rate</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inserted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inserted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Load__c</fullName>
        <label>Load</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Cost__c</fullName>
        <formula>Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Rate_on_Unit__c</fullName>
        <label>Old Rate on Unit</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Unit</label>
        <referenceTo>Project_Unit__c</referenceTo>
        <relationshipLabel>Unit Area Charge Details</relationshipLabel>
        <relationshipName>Unit_Area_Charge_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rebate_Amount__c</fullName>
        <label>Rebate Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rebate_Percent__c</fullName>
        <label>Rebate Percent</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rebate_Rate__c</fullName>
        <label>Rebate Rate</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Special_Amount__c</fullName>
        <label>Special Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Special_Percent__c</fullName>
        <label>Special Percent</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Special_Rate__c</fullName>
        <label>Special Rate</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_Pay_Plan_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Standard Pay Plan Header</label>
        <referenceTo>Standard_Pay_Plan_Header__c</referenceTo>
        <relationshipLabel>Unit Area Charge Details</relationshipLabel>
        <relationshipName>Unit_Area_Charge_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_rate__c</fullName>
        <formula>Inaugral_Rate__c + Special_Rate__c + Broker_Rate__c + Rebate_Rate__c+ Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Area_Taxation_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UnitAreaTaxationDetail</label>
        <referenceTo>UnitAreaTaxationDetail__c</referenceTo>
        <relationshipLabel>Unit Area Charge Details</relationshipLabel>
        <relationshipName>Unit_Area_Charge_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Unit Area Charge Detail</label>
    <nameField>
        <label>Unit Area Charge Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unit Area Charge Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>